fix: fix start screen column gap

--- a/shelter/pages/main/style.scss
+++ b/shelter/pages/main/style.scss
@@ -199,11 +199,12 @@ h5{
     //max-height: 728px;
     height: auto;
     margin-top: 60px;
-    margin-left: auto;
-    margin-right: auto;
+    // margin-left: auto;
+    // margin-right: auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    column-gap: 40px;
     @include size-medium{
       width: calc(100% - 200px);
       //background-color: red;
